# content-tamer-ai

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  =1.1.0  =1.3.0  CLAUDE.md  LICENSE  Makefile  NOTICE  QUICK_START.md  README.md  TESTING_STRATEGY.md  TEST_STRATEGY_UPLIFT_PLAN.md  ai_providers.py  content_processors.py  easy-setup.py  file_organizer.py  final_pylint_score.txt  install.bat  install.py  install.sh  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py  sortrenamemovepdf.py  test_sortrenamemovepdf.py
.claude/: settings.json.example
.pre-commit-hooks/: contract-tests.sh
data/.processing/: .progress
data/config/: feature_flags.json
data/debug_output/: .progress
docs/: ARCHITECTURAL_PATTERNS_SUMMARY.md  CONTEXT_BACKLOG.md  CRITICAL_ISSUES.md  PYLINT_FINAL_REPORT.md  README.md  REPOSITORY_MAINTENANCE_GUIDE.md
docs/archive/: CLAUDE_OLD.md  DISPLAY_MANAGER_REFACTORING.md  HOW_IT_WORKS.md  ORGANIZATION_QUALITY_IMPROVEMENTS.md  PROCESSING_DEFECTS_FIXED.md  README.md  REPOSITORY_MAINTENANCE_GUIDE.md  REPOSITORY_STRUCTURE.md
docs/claude/: ARCHITECTURE.md  CLAUDE_CORE.md  GUARDRAILS.md  PATTERNS.md  SECURITY_OPS.md  TEST_STRATEGY.md  WORKFLOWS.md
docs/development/: DEVELOPMENT_STANDARDS.md  FEATURE_RICH_UI_FALLBACK.md  SECURITY_STANDARDS.md
docs/product/: BACKLOG.md  LOCAL_LLM_IMPLEMENTATION_PLAN.md  POST_PROCESSING_ORGANIZATION_SPEC.md  PRD_00_ROADMAP.md  PRD_04_BALANCED_ARCHITECTURE_2024.md  PRD_04_PACKAGE_RECOMMENDATIONS_2024.md  PRD_05_PHASE_4_RICH_TESTING_MIGRATION.md  PRD_05_PHASE_4_RICH_TESTING_MIGRATION_COMPLETION_REPORT.md  PRD_05_RICH_ARCHITECTURE_ANALYSIS.md  PRD_05_RICH_TESTING_MIGRATION_GUIDE.md  PRD_06_INTEGRATION_ISSUE_RESOLUTION_PLAN.md  PRD_06_INTERFACE_LAYER_REFACTORING_PLAN.md  PRD_06_OPTION_A_IMPLEMENTATION_PLAN.md  PRD_06_PERSONA_DRIVEN_ARCHITECTURE_ANALYSIS.md  PRD_06_PHASE_2_COMPLETION_REPORT.md  PRD_06_REPOSITORY_RESTRUCTURING_PLAN.md  PRD_06_SYSTEMATIC_MIGRATION_ROADMAP.md  PRD_07_AGENT_ORCHESTRATION_FRAMEWORK.md
docs/security/: pdf-security.md
docs/testing/: INTERFACE_BOUNDARY_MAP.md  TESTING_BEST_PRACTICES.md  TESTING_STRATEGY.md
docs/ways-of-working/: ARCHITECTURAL_DECISION_RECORDS.md  BACKWARD_COMPATIBILITY_GUIDE.md  CODE_QUALITY_CHECKLIST.md  COMPLETION_CRITERIA.md  DEBUG_FIRST_PRINCIPLES.md  DOMAIN_SERVICE_EXTRACTION_PATTERNS.md  PERSONA_DRIVEN_INTERFACE_PATTERNS.md  PRE-CODE_CHECKLIST.md  README.md  RICH_CONSOLE_TESTING_GUIDE.md  RICH_UI_DEVELOPMENT_PATTERNS.md  SECURITY_AUDIT_METHODOLOGY.md  SECURITY_TESTING_STRATEGY.md  VALIDATION_DRIVEN_DEVELOPMENT.md
documents/input/: README_GETTING_STARTED.txt  test_document.txt
examples/: getting_started.md
scripts/: install.py  sanitize_logs.py
src/: __init__.py  ai_providers.py  content_processors.py  file_organizer.py  main.py
src/content_analysis/: metadata_extractor.py  ml_refiner.py  rule_classifier.py  temporal_analyzer.py  uncertainty_detector.py
src/core/: __init__.py  application.py  application_container.py  cli_handler.py  cli_parser.py  compatibility_layer.py  (+4 more)
tests/: conftest.py  test_ai_providers.py  test_cli_display.py  test_content_processors.py  test_current_bug_tdd.py  test_dependency_manager.py  test_display_manager.py  test_e2e_local_llm.py  test_e2e_multi_provider.py  test_e2e_real_workflows.py  test_e2e_user_workflows.py  test_error_handling.py  test_file_organizer.py  test_filename_config.py  test_hardware_detector.py  test_integration.py  test_interface_layer.py  test_model_manager.py  test_organization_file_executor.py  test_organization_integration.py  test_pdf_security.py  test_phase2_integration.py  test_phase3_message_enhancements.py  test_progress_display.py  test_progress_fix.py  test_rich_testing_utils.py  test_rich_ui_regression.py  test_security.py  test_simple_tdd.py  test_state_isolation.py  test_success_failure_integration.py  test_utils.py
tools/: README.md  console_analysis.py  token_analysis.py
utils/: text_utils.py
(+285 files in other folders)
